change document title, increase home button size on and center align home content on mobile, add padding-bottom to .song, and change name font style, and fix responsiveness between 400-500px

--- a/src/index.scss
+++ b/src/index.scss
@@ -156,16 +156,21 @@ svg {
       list-style: none;
     }
 
+
     li * {
       text-decoration: none;
       color: $white;
       font-size: clamp(0.75rem, 2vw, 1rem);
-      font-weight: 700;
+      font-weight: 300;
       letter-spacing: 2px;
 
       &:hover {
         color: $pink;
       }
+    }
+
+    li *.active {
+        font-weight: 900;
     }
   }
 }
@@ -176,9 +181,9 @@ svg {
   width: 100px;
   text-decoration: none;
   font-weight: 700;
-  font-size: clamp(0.5rem, 1vw, 1rem);
-  padding-block: clamp(5px, 1.25vw, 15px);
-  padding-inline: clamp(5px, 2vw, 30px);
+  font-size: clamp(0.75rem, 1vw, 1rem);
+  padding-block: clamp(8px, 1.25vw, 15px);
+  padding-inline: clamp(15px, 2vw, 30px);
   margin-right: clamp(5px, 0.75vw, 15px);
   border: none;
   cursor: pointer;
@@ -219,19 +224,19 @@ svg {
     padding-right: clamp(30px, 5vw, 75px);
 
     h1 {
-      font-size: clamp(1.25rem, 3.5vw, 3.5rem);
+      font-size: clamp(1.5rem, 3.5vw, 3.5rem);
       font-weight: 400;
       margin: 0;
 
       span {
-        font-size: clamp(1.75rem, 5vw, 4.5rem);
+        font-size: clamp(2rem, 5vw, 4.5rem);
         font-family: 'Kaushan Script', cursive;
         color: $pink;
       }
     }
 
     h2 {
-      font-size: clamp(0.5rem, 1.5vw, 1.5rem);
+      font-size: clamp(0.75rem, 1.5vw, 1.5rem);
       font-weight: 100;
       letter-spacing: 2px;
       margin: 0;
@@ -307,6 +312,7 @@ svg {
     }
 
     h2 {
+      font-family: 'Kaushan Script', cursive;
       font-size: clamp(1.25rem, 2vw, 2rem);
       font-weight: 400;
       color: $white;
@@ -327,7 +333,6 @@ svg {
       display: flex;
       justify-content: center;
       padding: clamp(5px, 1vw, 20px);
-      padding-bottom: 0;
       margin-top: 0;
     }
 
@@ -758,7 +763,7 @@ svg {
     .home {
       margin-right: 20px;
       padding: 50px;
-      padding-left: 90px;
+      padding-inline: 80px 20px;
 
       h1 {
         font-size: 1rem;
@@ -786,6 +791,10 @@ svg {
 
   .home-page {
     flex-direction: column;
+
+    .home {
+      text-align: center;
+    }
 
     .phone-container {
       position: relative;
